--- a/pongping.cabal
+++ b/pongping.cabal
@@ -19,6 +19,6 @@ executable pongping
   main-is:             Main.hs
   -- other-modules:
   -- other-extensions:
-  build-depends:       base ^>=4.12.0.0, gloss == 1.13.*
+  build-depends:       base ^>=4.12.0.0, gloss == 1.13.*, random == 1.1
   hs-source-dirs:      src
   default-language:    Haskell2010
